<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_playing"
            android:icon="@drawable/ic_play_circle_outline_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_favorit"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorit" />

    </group>

    <item android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_applications"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
